Style: Fixed missing color in newsletter signup input

--- a/css/footer.css
+++ b/css/footer.css
@@ -112,6 +112,7 @@ footer address a {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     appearance: none;
+    color: var(--clr-white);
 }
 
 .footer__acknowledge {
